# claude-tui

./: .gitignore  README.md  install-ogre-sounds.sh  install-peon-sounds.sh  install-tf2-pyro-sounds.sh  install-tf2-sniper-sounds.sh  install-turret-sounds.sh  pyproject.toml
src/claude_tui/: app.py  app.tcss  dev.py  models.py  server.py  sessions.py  settings.py  tmux.py  transcript.py
src/claude_tui/widgets/: session_card.py  session_table.py
