[project]
name = "claude-tui"
version = "0.1.0"
description = "TUI for monitoring Claude Code sessions across tmux windows"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.85.0",
    "aiohttp>=3.10.0",
]

[project.scripts]
claude-tui = "claude_tui.app:main"
claude-tui-dev = "claude_tui.dev:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "watchfiles>=1.1.1",
]
